toplevel.h
@@ -318,7 +318,6 @@ protected:
     void addDamageFull();
     void getWmClientLeader();
     void getWmClientMachine();
-    void setReadyForPainting();
     /**
      * @returns Whether there is a compositor and it is active.
      **/
@@ -343,8 +342,11 @@ protected:
     int bit_depth;
     NETWinInfo2* info;
     bool ready_for_painting;
+    QTimer *m_readyForPaintingTimer;
     QRegion repaints_region; // updating, repaint just requires repaint of that area
     QRegion layer_repaints_region;
+protected slots:
+    void setReadyForPainting();
 private:
     static QByteArray staticWindowRole(WId);
     static QByteArray staticSessionId(WId);
